# oakly

./: Cargo.toml
oakly-compiler/: Cargo.toml
oakly-compiler/example-files/: types.oakly
oakly-compiler/src/: main.rs
tree-sitter-oakly/: Cargo.toml  example-file.oakly  grammar.js  package.json  tree-sitter.json
tree-sitter-oakly/bindings/rust/: build.rs  lib.rs
tree-sitter-oakly/queries/: highlights.scm
tree-sitter-oakly/src/: grammar.json  node-types.json  parser.c
tree-sitter-oakly/test/corpus/: statements.txt
