[package]
name = "tree-sitter-oakly"
description = "Functional language"
version = "0.1.0"
authors = ["Janek Winkler <janekx21@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "oakly"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/janekx21/tree-sitter-oakly"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
